WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33347
[v8] regression: didDestroyScriptContextForFrame no longer called
https://bugs.webkit.org/show_bug.cgi?id=33347
Summary
[v8] regression: didDestroyScriptContextForFrame no longer called
Matt Perry
Reported
2010-01-07 14:59:38 PST
This call seems to have gotten lost in the V8Proxy refactoring. I just need to add it back to V8DOMWindowShell::disposeContextHandles.
Attachments
add the call back
(1.14 KB, patch)
2010-01-07 15:11 PST
,
Matt Perry
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Perry
Comment 1
2010-01-07 15:11:27 PST
Created
attachment 46089
[details]
add the call back
WebKit Review Bot
Comment 2
2010-01-07 15:14:44 PST
style-queue ran check-webkit-style on
attachment 46089
[details]
without any errors.
Adam Barth
Comment 3
2010-01-07 15:43:39 PST
Comment on
attachment 46089
[details]
add the call back Looks good. Sorry I dropped the call. :(
Adam Barth
Comment 4
2010-01-08 10:54:51 PST
Comment on
attachment 46089
[details]
add the call back Clearing flags on attachment: 46089 Committed
r52996
: <
http://trac.webkit.org/changeset/52996
>
Adam Barth
Comment 5
2010-01-08 10:54:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug