2010-01-08  Matt Perry  <mpcomplete@chromium.org>

Reviewed by Adam Barth.

        Fix a regression that removed a call to
        FrameLoaderClient::didDestroyScriptContextForFrame.
        https://bugs.webkit.org/show_bug.cgi?id=33347

        * bindings/v8/V8DOMWindowShell.cpp:
        (WebCore::V8DOMWindowShell::disposeContextHandles):

Canonical link: https://commits.webkit.org/44408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52996 268f45cc-cd09-0410-ab3c-d52691b4dbfc